# Progetto

./: .RData  .Rhistory  1_📄_Pagina principale.py  README.md  app.py  giocatori.py  hello.py  main_page.py  pyproject.toml  squadre.py  win_probability_analysis.R  win_probability_analysis.qmd
data/: df_season_1.txt  df_season_2.txt  team_stats.txt  three_point_volume.txt
pages/: 2_📊_Analisi Tecnica.py  3_⛹️‍♂️_Giocatori.py  4_👥_Squadre.py
