[project]
name = "Progetto-SDE2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cairocffi>=1.7.1",
    "cairosvg>=2.7.1",
    "icecream>=2.1.3",
    "matplotlib>=3.9.4",
    "mplbasketball>=1.0.0",
    "nba-api>=1.1.13",
    "numpy>=1.0.0",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pycairo>=1.27.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
]
